--- a/styles.css
+++ b/styles.css
@@ -180,3 +180,17 @@ a img {
     margin: 20px auto;
     border-radius: 8px;
 }
+
+
+.logo {
+    width: 200px; /* Ajustez la taille de l'image à votre convenance */
+    height: auto; /* Conserve le ratio de l'image */
+    display: block; /* Assure que l'image est traitée comme un bloc */
+    margin: 0 auto; /* Centre l'image horizontalement */
+}
+
+header {
+    background-color: #111; /* Vous pouvez ajuster la couleur d'arrière-plan si besoin */
+    padding: 20px;
+    text-align: center; /* Centre le contenu du header */
+}
