--- a/styles.css
+++ b/styles.css
@@ -33,28 +33,31 @@ nav a {
 nav a:hover {
     text-decoration: underline;
 }
-
 /* Styles pour la section héro sur la page d'accueil */
 .hero {
-    background-image: url('Photos/Back_in_scott.jpg');
+    background-image: url('Photos/Banniere.jpg');
     background-size: cover;
     background-position: center;    
-    height: 10px; /* Définit une hauteur à la section pour que l'image soit visible */
+    max-width: 1500px; /* Limite la largeur de l'image */
+    height: 800px; /* Définit une hauteur à la section pour que l'image soit visible */
+    margin: 0 auto; /* Centre la section héro horizontalement */
+    display: flex;
+    justify-content: center; /* Centre le texte horizontalement */
+    align-items: center; /* Centre le texte verticalement */
+    position: relative; /* Important pour que l'image et le texte soient bien positionnés */
 }
 
-.hero h2 {
-    font-size: 36px;
-    margin-bottom: 20px;
-}
 
 .hero p {
     font-size: 20px;
     max-width: 800px;
     margin: 0 auto;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.7); /* Arrière-plan semi-transparent */
     padding: 20px;
     border-radius: 8px;
+    text-align: center; /* Centre le texte à l'intérieur du paragraphe */
 }
+
 
 /* Styles pour les tableaux de dates */
 table {
@@ -178,7 +181,7 @@ a img {
 
 
 .logo {
-    width: 10px; /* Ajustez la taille de l'image à votre convenance */
+    width: 420px; /* Ajustez la taille de l'image à votre convenance */
     height: auto; /* Conserve le ratio de l'image */
     display: block; /* Assure que l'image est traitée comme un bloc */
     margin: 0 auto; /* Centre l'image horizontalement */
@@ -186,6 +189,9 @@ a img {
 
 header {
     background-color: #111; /* Vous pouvez ajuster la couleur d'arrière-plan si besoin */
-    padding: 20px;
+    padding: 10px;
     text-align: center; /* Centre le contenu du header */
+}
+p {
+    margin-bottom: 20px; /* Ajoute un espace de 20px en bas de chaque paragraphe */
 }
